[fix] Fixed app version staying visible when scrolling

--- a/docs/src/pages/intro/intro.scss
+++ b/docs/src/pages/intro/intro.scss
@@ -3,7 +3,7 @@
     text-align: center;
 
     .app-version {
-        position: fixed;
+        position: absolute;
         left: 10px;
         top: 10px;
         font-size: 9pt;
